--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1C7-b2-6cg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="goi-zp-Iw8">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -101,7 +101,7 @@
         <!--Profile-->
         <scene sceneID="WQH-9q-OKj">
             <objects>
-                <viewController id="ikl-Be-G8a" customClass="ProfileViewController" customModule="updine_user" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ikl-Be-G8a" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="D08-J7-EfC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -139,6 +139,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VFL-K1-NNA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-63.200000000000003" y="1025.615763546798"/>
+        </scene>
+        <!--Data Source-->
+        <scene sceneID="rXh-rV-yal">
+            <objects>
+                <viewController id="yFR-aX-t3D" customClass="ProfileViewController" customModule="updine_user" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g30-eW-oPz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vDX-pS-pws">
+                                <rect key="frame" x="16" y="44" width="73" height="67"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9r-M9-rY2">
+                                <rect key="frame" x="281" y="23" width="78" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <state key="normal" title="Join Call"/>
+                                <connections>
+                                    <action selector="joinCallPressed:" destination="yFR-aX-t3D" eventType="touchUpInside" id="XI2-ga-Jgl"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjE-ic-P7w" customClass="iCarousel">
+                                <rect key="frame" x="0.0" y="483" width="375" height="246"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="yFR-aX-t3D" id="v47-JX-8fE"/>
+                                    <outlet property="delegate" destination="yFR-aX-t3D" id="Pdv-z5-OCx"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="816-Ze-nRg"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="D45-yl-7eA">
+                        <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
+                    </tabBarItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="iCarouselView" destination="OjE-ic-P7w" id="KBX-rs-nAt"/>
+                        <outlet property="joinCall" destination="C9r-M9-rY2" id="zAX-oi-sW1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="odh-mg-xhZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-847.20000000000005" y="1025.615763546798"/>
         </scene>
         <!--Bottom Sheet View Controller-->
         <scene sceneID="hGK-Bm-OFA">
@@ -364,7 +412,7 @@
                     <connections>
                         <segue destination="1C7-b2-6cg" kind="relationship" relationship="viewControllers" id="x81-j1-NfW"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Kr4-EA-L1N"/>
-                        <segue destination="ikl-Be-G8a" kind="relationship" relationship="viewControllers" id="Xyc-A6-qDH"/>
+                        <segue destination="yFR-aX-t3D" kind="relationship" relationship="viewControllers" id="Kfq-rV-KVm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HMr-H3-haz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
